--- a/HotelOrTaxi.Tests/HotelOrTaxi.Tests.csproj
+++ b/HotelOrTaxi.Tests/HotelOrTaxi.Tests.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\Class1.cs" />
+    <Compile Include="Controllers\TestHomeController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
