Added taxi API wrapper

--- a/TaxiApi/App.config
+++ b/TaxiApi/App.config
@@ -2,6 +2,6 @@
 <configuration>
   <appSettings>
     <add key="YourTaxiApiUri" value="http://yourtaximeter.com/api/"/>
-    <add key="YourTaxiApiKey" value="OUR_KEY"/>
+    <add key="YourTaxiApiKey" value=""/>
   </appSettings>
 </configuration>
