--- a/HotelOrTaxi.Tests/App.config
+++ b/HotelOrTaxi.Tests/App.config
@@ -1,14 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<!-- 
-    Note: Add entries to the App.config file for configuration settings
-    that apply only to the Test project.
--->
 <configuration>
-    <appSettings>
-
-    </appSettings>
-
-    <connectionStrings>
-
-    </connectionStrings>
+  <appSettings>
+    <add key="YourTaxiApiUri" value="http://yourtaximeter.com/api/"/>
+    <add key="YourTaxiApiKey" value="OUR_KEY"/>
+  </appSettings>
 </configuration>
