--- a/Geography/Geography.csproj
+++ b/Geography/Geography.csproj
@@ -4,15 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D89796E5-3B53-4A9C-B93B-8ABEAEAC31F7}</ProjectGuid>
+    <ProjectGuid>{6BA51F12-00AB-4F55-8885-F2AFF731A90C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TaxiApi</RootNamespace>
-    <AssemblyName>TaxiApi</AssemblyName>
+    <RootNamespace>Geography</RootNamespace>
+    <AssemblyName>Geography</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,41 +30,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\Configuration.cs" />
-    <Compile Include="Configuration\IConfiguration.cs" />
+    <Compile Include="GeographicCoordinate.cs" />
+    <Compile Include="Journey.cs" />
+    <Compile Include="Latitude.cs" />
+    <Compile Include="Location.cs" />
+    <Compile Include="Longitude.cs" />
+    <Compile Include="Metres.cs" />
+    <Compile Include="Passengers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Request\FareRequestFactory.cs" />
-    <Compile Include="Request\IPerformApiRequest.cs" />
-    <Compile Include="Request\WebClientPerformApiRequest.cs" />
-    <Compile Include="Response\FareResponse.cs" />
-    <Compile Include="Response\FareResponseFactory.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Geography\Geography.csproj">
-      <Project>{6ba51f12-00ab-4f55-8885-f2aff731a90c}</Project>
-      <Name>Geography</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
