--- a/TaxiApi.Tests/TaxiApi.Tests.csproj
+++ b/TaxiApi.Tests/TaxiApi.Tests.csproj
@@ -45,6 +45,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Geography\Geography.csproj">
+      <Project>{6ba51f12-00ab-4f55-8885-f2aff731a90c}</Project>
+      <Name>Geography</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TaxiApi\TaxiApi.csproj">
       <Project>{D89796E5-3B53-4A9C-B93B-8ABEAEAC31F7}</Project>
       <Name>TaxiApi</Name>
