--- a/Geography/Geography.csproj
+++ b/Geography/Geography.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Destination.cs" />
     <Compile Include="DistanceFactory.cs" />
     <Compile Include="GeographicCoordinate.cs" />
     <Compile Include="Journey.cs" />
@@ -48,6 +49,7 @@
     <Compile Include="Metres.cs" />
     <Compile Include="Passengers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartingPoint.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
