--- a/GoogleMapsApi.Tests/GoogleMapsApi.Tests.csproj
+++ b/GoogleMapsApi.Tests/GoogleMapsApi.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4A920C9D-4EB0-4A00-8647-A71FA50214A4}</ProjectGuid>
+    <ProjectGuid>{34C0580E-A98D-4C39-B0B7-ADD81D52B709}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TaxiApi.Tests</RootNamespace>
-    <AssemblyName>TaxiApi.Tests</AssemblyName>
+    <RootNamespace>GoogleMapsApi.Tests</RootNamespace>
+    <AssemblyName>GoogleMapsApi.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -32,35 +32,38 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FareResponseFactoryTests.cs" />
-    <Compile Include="FareRequestFactoryTests.cs" />
+    <Compile Include="DirectionsFactory.cs" />
+    <Compile Include="IntegrationTestGoogleMapsApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Geography\Geography.csproj">
-      <Project>{6ba51f12-00ab-4f55-8885-f2aff731a90c}</Project>
+      <Project>{6BA51F12-00AB-4F55-8885-F2AFF731A90C}</Project>
       <Name>Geography</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TaxiApi\TaxiApi.csproj">
-      <Project>{D89796E5-3B53-4A9C-B93B-8ABEAEAC31F7}</Project>
-      <Name>TaxiApi</Name>
     </ProjectReference>
     <ProjectReference Include="..\WebClientWrapper\WebResponse.csproj">
       <Project>{DC27CAE4-0979-44FF-B297-44D10094C508}</Project>
       <Name>WebResponse</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
