--- a/JourneyCalculator/JourneyCalculator.csproj
+++ b/JourneyCalculator/JourneyCalculator.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DC27CAE4-0979-44FF-B297-44D10094C508}</ProjectGuid>
+    <ProjectGuid>{4A92EB6D-6BA5-41C2-8E21-699DA5223740}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebResponse</RootNamespace>
-    <AssemblyName>WebResponse</AssemblyName>
+    <RootNamespace>JourneyCalculator</RootNamespace>
+    <AssemblyName>JourneyCalculator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,9 +42,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IDownloadResponses.cs" />
+    <Compile Include="GoogleMapsApiDeserialiser.cs" />
+    <Compile Include="DistanceCalculator.cs" />
+    <Compile Include="Distance.cs" />
+    <Compile Include="GoogleMapsDirectionsDistanceMapper.cs" />
+    <Compile Include="GoogleMapsDirectionsResponse.cs" />
+    <Compile Include="ICanGetTheDistanceOfATaxiJourneyBetweenPoints.cs" />
+    <Compile Include="Legs.cs" />
+    <Compile Include="NoRouteFoundException.cs" />
+    <Compile Include="NoRouteSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebClientWrapper.cs" />
+    <Compile Include="Routes.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Geography\Geography.csproj">
+      <Project>{6BA51F12-00AB-4F55-8885-F2AFF731A90C}</Project>
+      <Name>Geography</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WebClientWrapper\WebResponse.csproj">
+      <Project>{DC27CAE4-0979-44FF-B297-44D10094C508}</Project>
+      <Name>WebResponse</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
