--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -107,6 +107,7 @@
     <Content Include="assets\img\glyphicons-halflings-white.png" />
     <Content Include="assets\img\glyphicons-halflings.png" />
     <Content Include="assets\js\add2home.js" />
+    <Content Include="assets\js\autocomplete.js" />
     <Content Include="assets\js\bootstrap.js" />
     <Content Include="assets\js\bootstrap.min.js" />
     <Content Include="assets\js\jquery-1.9.1.js" />
