--- a/HotelOrTaxi/Web.config
+++ b/HotelOrTaxi/Web.config
@@ -17,6 +17,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="YourTaxiApiUri" value="http://yourtaximeter.com/api/"/>
+    <add key="YourTaxiApiKey" value=""/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -36,6 +38,11 @@
       </namespaces>
     </pages>
   </system.web>
+  <system.net>
+    <settings>
+      <httpWebRequest useUnsafeHeaderParsing="true" />
+    </settings>
+  </system.net>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
