--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -119,6 +119,7 @@
     <Content Include="assets\js\autocomplete.js" />
     <Content Include="assets\js\bootstrap.js" />
     <Content Include="assets\js\bootstrap.min.js" />
+    <Content Include="assets\js\location.js" />
     <Content Include="assets\js\jquery-1.9.1.js" />
     <Content Include="assets\js\jquery-1.9.1.min.js" />
     <Content Include="favicon.ico" />
