refactoring to fix the taxi issue

--- a/HotelOrTaxi/Web.config
+++ b/HotelOrTaxi/Web.config
@@ -18,7 +18,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="YourTaxiApiUri" value="http://yourtaximeter.com/api/"/>
-    <add key="YourTaxiApiKey" value=""/>
+    <add key="YourTaxiApiKey" value="7mdXOf1Vss0hxRmb8BmCsdzhEj2SKBSI"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
