--- a/HotelOrTaxi.Tests/HotelOrTaxi.Tests.csproj
+++ b/HotelOrTaxi.Tests/HotelOrTaxi.Tests.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
@@ -68,10 +71,6 @@
     <ProjectReference Include="..\Hotel\Results.csproj">
       <Project>{762C86A6-C829-423E-A196-301252CE81A0}</Project>
       <Name>Results</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LateRoomsScraper\LateRoomsScraper.csproj">
-      <Project>{2D8548AD-8581-49DA-9A0B-EF3A4E3E1A7A}</Project>
-      <Name>LateRoomsScraper</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
