--- a/TaxiApi.Tests/TaxiApi.Tests.csproj
+++ b/TaxiApi.Tests/TaxiApi.Tests.csproj
@@ -52,6 +52,10 @@
       <Project>{6ba51f12-00ab-4f55-8885-f2aff731a90c}</Project>
       <Name>Geography</Name>
     </ProjectReference>
+    <ProjectReference Include="..\JourneyCalculator\JourneyCalculator.csproj">
+      <Project>{4A92EB6D-6BA5-41C2-8E21-699DA5223740}</Project>
+      <Name>JourneyCalculator</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TaxiApi\TaxiApi.csproj">
       <Project>{D89796E5-3B53-4A9C-B93B-8ABEAEAC31F7}</Project>
       <Name>TaxiApi</Name>
