--- a/TaxiApi/TaxiApi.csproj
+++ b/TaxiApi/TaxiApi.csproj
@@ -60,6 +60,10 @@
       <Project>{6ba51f12-00ab-4f55-8885-f2aff731a90c}</Project>
       <Name>Geography</Name>
     </ProjectReference>
+    <ProjectReference Include="..\JourneyCalculator\JourneyCalculator.csproj">
+      <Project>{4A92EB6D-6BA5-41C2-8E21-699DA5223740}</Project>
+      <Name>JourneyCalculator</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WebClientWrapper\WebResponse.csproj">
       <Project>{DC27CAE4-0979-44FF-B297-44D10094C508}</Project>
       <Name>WebResponse</Name>
