--- a/Hotel/Results.csproj
+++ b/Hotel/Results.csproj
@@ -55,6 +55,10 @@
       <Project>{6BA51F12-00AB-4F55-8885-F2AFF731A90C}</Project>
       <Name>Geography</Name>
     </ProjectReference>
+    <ProjectReference Include="..\JourneyCalculator\JourneyCalculator.csproj">
+      <Project>{4A92EB6D-6BA5-41C2-8E21-699DA5223740}</Project>
+      <Name>JourneyCalculator</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LateRoomsScraper\LateRoomsScraper.csproj">
       <Project>{2D8548AD-8581-49DA-9A0B-EF3A4E3E1A7A}</Project>
       <Name>LateRoomsScraper</Name>
