--- a/HotelOrTaxi.Tests/HotelOrTaxi.Tests.csproj
+++ b/HotelOrTaxi.Tests/HotelOrTaxi.Tests.csproj
@@ -72,6 +72,10 @@
       <Project>{762C86A6-C829-423E-A196-301252CE81A0}</Project>
       <Name>Results</Name>
     </ProjectReference>
+    <ProjectReference Include="..\JourneyCalculator\JourneyCalculator.csproj">
+      <Project>{4A92EB6D-6BA5-41C2-8E21-699DA5223740}</Project>
+      <Name>JourneyCalculator</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
