fixing some failures

--- a/HotelOrTaxi/Web.config
+++ b/HotelOrTaxi/Web.config
@@ -17,8 +17,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="YourTaxiApiUri" value="http://yourtaximeter.com/api/"/>
-    <add key="YourTaxiApiKey" value="7mdXOf1Vss0hxRmb8BmCsdzhEj2SKBSI"/>
+    <add key="YourTaxiApiUri" value="http://yourtaximeter.com/api/" />
+    <add key="YourTaxiApiKey" value="7mdXOf1Vss0hxRmb8BmCsdzhEj2SKBSI" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -67,6 +67,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
