--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -42,10 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime">
-      <HintPath>..\packages\WebGrease.1.1.0\lib\Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\WebGrease.1.3.0\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -77,7 +74,7 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="WebGrease">
-      <HintPath>..\packages\WebGrease.1.1.0\lib\WebGrease.dll</HintPath>
+      <HintPath>..\packages\WebGrease.1.3.0\lib\WebGrease.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +136,9 @@
     <Content Include="assets\js\jquery-1.9.1.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="Scripts\jquery-1.9.1.js" />
+    <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -168,11 +168,11 @@
       <Name>Geography</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hotel\Results.csproj">
-      <Project>{762C86A6-C829-423E-A196-301252CE81A0}</Project>
+      <Project>{762c86a6-c829-423e-a196-301252ce81a0}</Project>
       <Name>Results</Name>
     </ProjectReference>
     <ProjectReference Include="..\JourneyCalculator\JourneyCalculator.csproj">
-      <Project>{4A92EB6D-6BA5-41C2-8E21-699DA5223740}</Project>
+      <Project>{4a92eb6d-6ba5-41c2-8e21-699da5223740}</Project>
       <Name>JourneyCalculator</Name>
     </ProjectReference>
     <ProjectReference Include="..\LateRoomsScraper\LateRoomsScraper.csproj">
@@ -187,6 +187,9 @@
       <Project>{DC27CAE4-0979-44FF-B297-44D10094C508}</Project>
       <Name>WebResponse</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Scripts\jquery-1.9.1.min.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
