home page styles

--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -99,32 +99,53 @@
     <Content Include="assets\css\bootstrap-responsive.min.css" />
     <Content Include="assets\css\bootstrap.css" />
     <Content Include="assets\css\bootstrap.min.css" />
+    <Content Include="assets\css\style-3.css" />
     <Content Include="assets\css\style-2.css" />
     <Content Include="assets\css\style.css" />
+    <Content Include="assets\img\button-arrow.png" />
     <Content Include="assets\img\circle-1.jpg" />
     <Content Include="assets\img\circle-1.png" />
     <Content Include="assets\img\circle-2.jpg" />
     <Content Include="assets\img\circle-2.png" />
     <Content Include="assets\img\circle-3.png" />
+    <Content Include="assets\img\draw-wins.gif" />
+    <Content Include="assets\img\fight-big.gif" />
     <Content Include="assets\img\fight-button.jpg" />
     <Content Include="assets\img\fight-button.png" />
+    <Content Include="assets\img\fight-small.gif" />
+    <Content Include="assets\img\fighting.gif" />
     <Content Include="assets\img\glyphicons-halflings-white.png" />
     <Content Include="assets\img\glyphicons-halflings.png" />
     <Content Include="assets\img\header-gradient.jpg" />
     <Content Include="assets\img\hotel-home-image.png" />
     <Content Include="assets\img\hotel-icon.png" />
     <Content Include="assets\img\hotel-wins-icon.png" />
+    <Content Include="assets\img\hotel-wins.gif" />
     <Content Include="assets\img\icon-app-v2.png" />
     <Content Include="assets\img\icon-app.png" />
     <Content Include="assets\img\icons-hotel-and-taxi.png" />
     <Content Include="assets\img\lightbulb-home-image.png" />
     <Content Include="assets\img\logo.png" />
+    <Content Include="assets\img\people\abi.png" />
+    <Content Include="assets\img\people\adam.png" />
+    <Content Include="assets\img\people\alex.png" />
+    <Content Include="assets\img\people\andy.png" />
+    <Content Include="assets\img\people\ella.png" />
+    <Content Include="assets\img\people\gemma.png" />
+    <Content Include="assets\img\people\jane.png" />
+    <Content Include="assets\img\people\martin.png" />
+    <Content Include="assets\img\people\pete.png" />
+    <Content Include="assets\img\people\richard.png" />
+    <Content Include="assets\img\people\rob.png" />
+    <Content Include="assets\img\people\sam.png" />
     <Content Include="assets\img\person-thinking.jpg" />
     <Content Include="assets\img\search-icon.png" />
+    <Content Include="assets\img\speechbubble-arrow.png" />
     <Content Include="assets\img\startscreen.png" />
     <Content Include="assets\img\taxi-home-image.png" />
     <Content Include="assets\img\taxi-icon.png" />
     <Content Include="assets\img\taxi-wins-icon.png" />
+    <Content Include="assets\img\taxi-wins.gif" />
     <Content Include="assets\img\text-logo-mobile.png" />
     <Content Include="assets\img\text-logo-web.png" />
     <Content Include="assets\js\add2home.js" />
