search results images

--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -106,6 +106,18 @@
     <Content Include="assets\css\style-3.css" />
     <Content Include="assets\css\style-2.css" />
     <Content Include="assets\css\style.css" />
+    <Content Include="assets\img\areas\searchresults\128px-faces.png" />
+    <Content Include="assets\img\areas\searchresults\32px-faces.png" />
+    <Content Include="assets\img\areas\searchresults\64px-faces.png" />
+    <Content Include="assets\img\areas\searchresults\close-filter.png" />
+    <Content Include="assets\img\areas\searchresults\m-sort-down-arrow.png" />
+    <Content Include="assets\img\areas\searchresults\map-pins.png" />
+    <Content Include="assets\img\areas\searchresults\no-rooms-faces.png" />
+    <Content Include="assets\img\areas\searchresults\search-icons-small.png" />
+    <Content Include="assets\img\areas\searchresults\sort-arrows.png" />
+    <Content Include="assets\img\areas\searchresults\sort-header-border.png" />
+    <Content Include="assets\img\areas\searchresults\SR-button-small.png" />
+    <Content Include="assets\img\areas\searchresults\star-small.png" />
     <Content Include="assets\img\button-arrow.png" />
     <Content Include="assets\img\circle-1.jpg" />
     <Content Include="assets\img\circle-1.png" />
