added a fix to use a fake taxi price when we run out of requests

--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Models\TaxisViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaxiViewModelFactory.cs" />
+    <Compile Include="WhoIsTheWinner.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\css\add2home.css" />
