--- a/Hotel/Results.csproj
+++ b/Hotel/Results.csproj
@@ -67,6 +67,10 @@
       <Project>{D89796E5-3B53-4A9C-B93B-8ABEAEAC31F7}</Project>
       <Name>TaxiApi</Name>
     </ProjectReference>
+    <ProjectReference Include="..\WebClientWrapper\WebResponse.csproj">
+      <Project>{DC27CAE4-0979-44FF-B297-44D10094C508}</Project>
+      <Name>WebResponse</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
