--- a/HotelOrTaxi/Web.config
+++ b/HotelOrTaxi/Web.config
@@ -19,6 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="YourTaxiApiUri" value="http://yourtaximeter.com/api/" />
     <add key="YourTaxiApiKey" value="7mdXOf1Vss0hxRmb8BmCsdzhEj2SKBSI" />
+    <add key="GooglePlacesApiKey" value="AIzaSyAGpY8q9gQnZl4VhdX9u7Twm_YEdUhvCsc" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
