--- a/TaxiApi.Tests/TaxiApi.Tests.csproj
+++ b/TaxiApi.Tests/TaxiApi.Tests.csproj
@@ -48,9 +48,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Configuration\Configuration.csproj">
+      <Project>{BCB5B7E9-DE32-4495-AEA1-0CC2061D3340}</Project>
+      <Name>Configuration</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Geography\Geography.csproj">
       <Project>{6ba51f12-00ab-4f55-8885-f2aff731a90c}</Project>
       <Name>Geography</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HotelOrTaxi\HotelOrTaxi.csproj">
+      <Project>{23BF57C4-7449-4F1B-97F5-F8FDBB40249E}</Project>
+      <Name>HotelOrTaxi</Name>
     </ProjectReference>
     <ProjectReference Include="..\JourneyCalculator\JourneyCalculator.csproj">
       <Project>{4A92EB6D-6BA5-41C2-8E21-699DA5223740}</Project>
