Logic to exclude taxi results for words/phrases
Keywords specified in config will be excluded from google place results

--- a/HotelOrTaxi/Web.config
+++ b/HotelOrTaxi/Web.config
@@ -20,6 +20,8 @@
     <add key="YourTaxiApiUri" value="http://yourtaximeter.com/api/" />
     <add key="YourTaxiApiKey" value="7mdXOf1Vss0hxRmb8BmCsdzhEj2SKBSI" />
     <add key="GooglePlacesApiKey" value="AIzaSyAGpY8q9gQnZl4VhdX9u7Twm_YEdUhvCsc" />
+    <add key="GooglePlacesExclusionPhrases" value="hire,academy,van hire,spares,repairs,electronics,rent,chauffeur,wedding,valet" />
+    <add key="GooglePlacesExclusionPhraseExceptions" value="private hire"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
